feat: add file sign api.